# MothMonitor2

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
args/: data_wrangler_coco.bash  data_wrangler_detr.bash  data_wrangler_sample.bash  data_wrangler_sample1.bash  data_wrangler_sample2.bash  data_wrangler_split.bash  data_wrangler_split2.bash  run_coco_model_train.bash  run_detr_model_train.bash  run_fasterrcnn_model_train.bash  run_model_train.bash
moth/: bug_boxer.py  data_wrangler.py  modify_boxes.py  modify_bug_outlines.py  outline_bugs.py  run_coco_model.py  run_detr_model.py  run_fasterrcnn_model.py  run_model.py
moth/pylib/: bbox.py  bug_box.py  bug_image.py  const.py  log.py  moth_dataset.py  util.py
tests/: test_smoke.py
