[build-system]
requires = ["uv_build>=0.8.12"]
build-backend = "uv_build"

[project]
name = "mothmonitor2"
version = "0.1.0"
description = "Models helping the MothMonitor project V2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "accelerate>=1.12.0",
  "albumentations>=2.0.8",
  "datasets>=4.5.0",
  "imagesize>=1.4.1",
  "pycocotools>=2.0.11",
  "scikit-image>=0.25.2",
  "timm>=1.0.24",
  "torchmetrics>=1.8.2",
  "tqdm>=4.67.1",
  "transformers>=4.57.6",
]

[dependency-groups]
dev = ["pre-commit>=4.3.0", "uv-build>=0.9.3"]

[tool.uv.sources]
torch = [{ index = "pytorch-rocm" }]
torchvision = [{ index = "pytorch-rocm" }]
pytorch-triton-rocm = [{ index = "pytorch-rocm" }]

# uv pip install --upgrade --pre torch torchvision --index-url https://download.pytorch.org/whl/nightly/rocm7.0
[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/nightly/rocm7.0"
explicit = true

[tool.uv.build-backend]
module-root = "."
module-name = "moth"

[tool.ruff]
exclude = ["notebooks/*"]

show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]

select = ["ALL"]

ignore = [
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
  "COM812",  # Trailing comma missing
  "D100",    # Missing docstring in public module
  "D101",    # Missing docstring in public class
  "D102",    # Missing docstring in public method
  "D103",    # Missing docstring in public function
  "D104",    # Missing docstring in public package
  "D105",    # Missing docstring in public method
  "D107",    # Missing docstring in public __init__
  "D203",    # 1 blank line required before class docstring
  "D212",    # Multi-line docstring summary should start at the first line
  "DTZ005",  # Pass a `datetime.timezone` object to the `tz` parameter
  "DTZ011",  # datetime.date.today() used"ERA001",  # Remove commented-out code
  "ERA001",  # Remove commented-out code
  "FIX002",  # Line contains TODO
  "G004",    # Logging statement uses f-string
  "LOG015",  # Use own logger instead
  "N818",    # Exception name {name} should be named with an Error suffix
  "PTH207",  # Replace `glob` with `Path.glob` or `Path.rglob`
  "PD901",   # Avoid using the generic variable name df for DataFrames
  "PLR0913", # Too many arguments in function definition ({c_args} > {max_args})
  "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
  "PT009",   # Use a regular assert instead of unittest-style {assertion}
  "RET504",  # Unnecessary assignment to {name} before return statement
  "RUF001",  # Ambiguous quote character in string
  "RUF002",  # Docstring contains ambiguous `‘`
  "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
  "S602",    # subprocess` call with `shell=True` identified, security issue
  "S607",    # Starting a process with a partial executable path
  "SIM114",  # Combine if branches using logical or operator
  "SIM905",  # Consider using a list literal instead of `str.split`
  "SLF001",  # Private member accessed: {access}
  "T201",    # print found
  "TD002",   # Missing author in TODO
  "TD003",   # Missing issue link on the line following this TODO
]
