[build-system]
requires = ["uv_build>=0.8.12"]
build-backend = "uv_build"

[project]
name = "mothmonitor2"
version = "0.1.0"
description = "Models helping the MothMonitor project V2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "accelerate>=1.12.0",
  "albumentations>=2.0.8",
  "datasets>=4.5.0",
  "imagesize",
  "pillow>=11.3.0",
  "pycocotools>=2.0.11",
  "rich>=14.3.2",
  "scikit-image",
  "timm>=1.0.24",
  "torch==2.11.0a0+rocm7.11.0a20260106",
  "torchmetrics",
  "torchvision==0.25.0a0+rocm7.11.0a20260106",
  "tqdm",
  "transformers",
  # "triton==3.6.0+gite0dbe353.rocm7.11.0a20260106",
]

[dependency-groups]
dev = ["pre-commit", "uv-build"]

[tool.uv.sources]
torch = [{ index = "pytorch" }]
torchvision = [{ index = "pytorch" }]
triton = [{ index = "pytorch" }]
triton-rocm = [{ index = "pytorch" }]

[[tool.uv.index]]
name = "pytorch"
# url = "https://download.pytorch.org/whl/rocm7.1"
url = "https://rocm.nightlies.amd.com/v2/gfx1151/"

[tool.uv.build-backend]
module-root = "."
module-name = "moth"

[tool.ruff]
exclude = ["notebooks/*", "external/*"]

show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]

select = ["ALL"]

ignore = [
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
  "B905",    # zip() without an explicit strict= parameter
  "COM812",  # Trailing comma missing
  "D100",    # Missing docstring in public module
  "D101",    # Missing docstring in public class
  "D102",    # Missing docstring in public method
  "D103",    # Missing docstring in public function
  "D104",    # Missing docstring in public package
  "D105",    # Missing docstring in public method
  "D107",    # Missing docstring in public __init__
  "D203",    # 1 blank line required before class docstring
  "D212",    # Multi-line docstring summary should start at the first line
  "D413",    # [*] Missing blank line after last section ("Returns")
  "DTZ005",  # Pass a `datetime.timezone` object to the `tz` parameter
  "DTZ011",  # datetime.date.today() used"ERA001",  # Remove commented-out code
  "ERA001",  # Remove commented-out code
  "FIX002",  # Line contains TODO
  "G004",    # Logging statement uses f-string
  "LOG015",  # Use own logger instead
  "N818",    # Exception name {name} should be named with an Error suffix
  "PTH207",  # Replace `glob` with `Path.glob` or `Path.rglob`
  "PLR0913", # Too many arguments in function definition ({c_args} > {max_args})
  "PLR0915", # Too many statements (> 50)
  "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
  "PT009",   # Use a regular assert instead of unittest-style {assertion}
  "RET504",  # Unnecessary assignment to {name} before return statement
  "RUF001",  # Ambiguous quote character in string
  "RUF002",  # Docstring contains ambiguous `‘`
  "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
  "S602",    # subprocess` call with `shell=True` identified, security issue
  "S607",    # Starting a process with a partial executable path
  "SIM114",  # Combine if branches using logical or operator
  "SIM905",  # Consider using a list literal instead of `str.split`
  "SLF001",  # Private member accessed: {access}
  "T201",    # print found
  "TD002",   # Missing author in TODO
  "TD003",   # Missing issue link on the line following this TODO
]
